--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.0",
-    "primevue": "^3.45.0",
+    "axios": "^1.6.0",
+    "marked": "^15.0.12",
     "primeicons": "^6.0.1",
-    "axios": "^1.6.0"
+    "primevue": "^3.45.0",
+    "vue": "^3.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.0.0"
   }
-} 
+}
