--- a/sefaria-proxy-worker/wrangler.toml
+++ b/sefaria-proxy-worker/wrangler.toml
@@ -1,3 +1,6 @@
-   name = "sefaria-proxy-worker"
-   main = "src/index.js"
-   compatibility_date = "2024-05-01"
+name = "sefaria-proxy-worker"
+main = "src/index.js"
+compatibility_date = "2024-03-20"
+
+[triggers]
+crons = []
