Corrected wragler deploy

--- a/sefaria-proxy-worker/wrangler.toml
+++ b/sefaria-proxy-worker/wrangler.toml
@@ -1,6 +1,7 @@
 name = "sefaria-proxy-worker"
 main = "src/index.js"
 compatibility_date = "2024-03-20"
+compatibility_flags = ["nodejs_compat"]
 
 [triggers]
 crons = []
