--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "vue": "^3.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
     "@vitejs/plugin-vue": "^4.5.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "vite": "^5.0.0"
   }
 }
