--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt build && npx wrangler deploy"
   },
   "dependencies": {
     "marked": "^15.0.12",
@@ -16,6 +17,6 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
-    "wrangler": "^3.0.0"
+    "wrangler": "^4.61.1"
   }
 }
