--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "deploy": "nuxt build && npx wrangler deploy"
   },
   "dependencies": {
+    "@nuxthub/core": "^0.10.6",
     "marked": "^15.0.12",
     "nuxt": "^3.14.0",
+    "nuxt-auth-utils": "^0.5.28",
     "vue": "^3.5.0"
   },
   "devDependencies": {
