--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxthub/core": "^0.10.6",
+    "lz-string": "^1.4.4",
     "marked": "^15.0.12",
     "nuxt": "^3.14.0",
     "nuxt-auth-utils": "^0.5.28",
