Completed account creation Enhanced login flow and error trapping

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,3 +13,6 @@ bucket = ".output/public"
 binding = "DB"
 database_name = "sefaria-tutor-db"
 database_id = "c89e48ee-42ac-46c3-8950-3f71e4c947c2"
+
+[vars]
+NUXT_PUBLIC_TURNSTILE_SITE_KEY = "0x4AAAAAACZzAyzFuLdSmQhT"
