--- a/wrangler.toml
+++ b/wrangler.toml
@@ -16,3 +16,8 @@ database_id = "c89e48ee-42ac-46c3-8950-3f71e4c947c2"
 
 [vars]
 NUXT_PUBLIC_TURNSTILE_SITE_KEY = "0x4AAAAAACZzAyzFuLdSmQhT"
+
+[observability]
+[observability.logs]
+enabled = true
+invocation_logs = true
