--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sefaria-tutor",
   "version": "0.1.0",
+  "license": "GPL-3.0",
   "private": true,
   "type": "module",
   "scripts": {
