Changed name to shoresh Enhanced transation of roots Added clear all cache entries

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Sefaria Tutor — copy to .env and fill in values.
+# Soresh — copy to .env and fill in values.
 # Do not commit .env or .dev.vars.
 
 # Server-only (used by /api/openai/chat and Nitro)
@@ -9,3 +9,14 @@ OPENAI_API_KEY=your-openai-api-key
 # Client (used by browser to call /api/openai/chat with Bearer token)
 # Nuxt maps NUXT_PUBLIC_* to runtimeConfig.public
 NUXT_PUBLIC_API_AUTH_TOKEN=your-auth-token-for-openai-proxy
+
+# OAuth (for Google login)
+# If redirect URL mismatch occurs in development, set the redirect URL explicitly:
+# For localhost development with Wrangler (port 8787):
+# NUXT_OAUTH_GOOGLE_REDIRECT_URL=http://localhost:8787/api/auth/google
+# For localhost development with Nuxt dev server (port 3000):
+# NUXT_OAUTH_GOOGLE_REDIRECT_URL=http://localhost:3000/api/auth/google
+# Leave empty in production - it will auto-detect from the request
+NUXT_OAUTH_GOOGLE_REDIRECT_URL=
+NUXT_OAUTH_GOOGLE_CLIENT_ID=your-google-client-id
+NUXT_OAUTH_GOOGLE_CLIENT_SECRET=your-google-client-secret
