Fixed shoresh spelling

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Soresh — copy to .env and fill in values.
+# Shoresh — copy to .env and fill in values.
 # Do not commit .env or .dev.vars.
 
 # Server-only (used by /api/openai/chat and Nitro)
