Updated license to CPAL

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sefaria-tutor",
   "version": "1.0.0",
-  "license": "GPL-3.0",
+  "license": "CPAL-1.0",
   "private": true,
   "type": "module",
   "scripts": {
