--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sefaria-tutor",
   "version": "1.0.0",
-  "license": "CPAL-1.0",
+  "license": "BUSL-1.1",
   "private": true,
   "type": "module",
   "scripts": {
