--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Shoresh — copy to .env and fill in values.
+# For local dev with Wrangler, copy the same keys to .dev.vars (same values).
 # Do not commit .env or .dev.vars.
 
 # Server-only (used by /api/openai/chat and Nitro)
@@ -10,6 +11,9 @@ OPENAI_API_KEY=your-openai-api-key
 # Nuxt maps NUXT_PUBLIC_* to runtimeConfig.public
 NUXT_PUBLIC_API_AUTH_TOKEN=your-auth-token-for-openai-proxy
 
+# Session (required for auth; min 32 chars for nuxt-auth-utils)
+NUXT_SESSION_PASSWORD=your-session-password-at-least-32-characters
+
 # OAuth (for Google login)
 # If redirect URL mismatch occurs in development, set the redirect URL explicitly:
 # For localhost development with Wrangler (port 8787):
@@ -20,3 +24,10 @@ NUXT_PUBLIC_API_AUTH_TOKEN=your-auth-token-for-openai-proxy
 NUXT_OAUTH_GOOGLE_REDIRECT_URL=
 NUXT_OAUTH_GOOGLE_CLIENT_ID=your-google-client-id
 NUXT_OAUTH_GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Turnstile (CAPTCHA on registration) — get keys at https://dash.cloudflare.com/ → Turnstile
+TURNSTILE_SECRET_KEY=
+NUXT_PUBLIC_TURNSTILE_SITE_KEY=
+
+# Resend (transactional email for verification, password reset, support)
+RESEND_API_KEY=
